--- a/package.json
+++ b/package.json
@@ -56,5 +56,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
-  }
+  },
+
+  "homepage": "https://RadmirShoev.github.io/Maket_finale"
 }
